apps/keycloak/route.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
      sectionName: keycloak
  hostnames:
    - "keycloak.kvlk.hu"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: keycloak-service
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /realms
        - path:
            type: PathPrefix
            value: /resources
        - path:
            type: PathPrefix
            value: /.well-known
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: Permissions-Policy
                value: "geolocation=(),midi=(),sync-xhr=(),microphone=(),camera=(),magnetometer=(),gyroscope=(),fullscreen=(self),payment=()"
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-internal
spec:
  parentRefs:
    - name: eg-internal
      namespace: envoy-gateway-system
      sectionName: internal
  hostnames:
    - "keycloak.kvlk.local"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: keycloak-service
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: X-Forwarded-Proto
                value: https
              - name: X-Forwarded-Port
                value: "8443"
              - name: X-Forwarded-Host
                value: keycloak.kvlk.local
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: Permissions-Policy
                value: "geolocation=(),midi=(),sync-xhr=(),microphone=(),camera=(),magnetometer=(),gyroscope=(),fullscreen=(self),payment=()"
