apps/keycloak/networkpolicy.yml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: keycloak
spec:
  endpointSelector:
    matchLabels:
      app: keycloak
  ingress:
    - fromEndpoints:
        - matchLabels:
            gateway.envoyproxy.io/owning-gateway-name: eg-internal
            app.kubernetes.io/name: envoy
            io.kubernetes.pod.namespace: envoy-gateway-system
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
          # rules:
          #   http:
          #     - method: ".*"
          #       path: ".*"

    - fromEndpoints:
        - matchLabels:
            gateway.envoyproxy.io/owning-gateway-name: eg
            app.kubernetes.io/name: envoy
            io.kubernetes.pod.namespace: envoy-gateway-system
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
          # rules:
          #   http:
          #     - method: ".*"
          #       path: "^/realms/.*"
          #     - method: ".*"
          #       path: "^/resources/.*"
          #     - method: ".*"
          #       path: "^/.well-known.*"
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: deny-from-other-namespaces
spec:
  endpointSelector: {} # Applies to all pods in the namespace
  ingress:
    - fromEndpoints:
        - {} # Allow from same namespace (pods without any specific labels)
